表示テキストを修正

--- a/hello-world.html
+++ b/hello-world.html
@@ -47,7 +47,7 @@
 <div id="mainContent">
 <p id="helloText">?</p>
 <button id="clickButton" class="buttonStyle">送信
-<button id="clickButton1" class="buttonStyle">キャン</button>
+<button id="clickButton1" class="buttonStyle">CAN</button>
 </div>
 <script> 
 var myButton = document.getElementById("clickButton1");
@@ -58,8 +58,7 @@ myButton.addEventListener('click', doSomething, false)
 
 function doSomething() {
 	myText.textContent = "hello!, world!";
-	color: red;
-}
+	}
 </script>
 
 </body>
